RESOLVED FIXED Bug 151860
[B3] Typo fix after r193386 to fix the build
https://bugs.webkit.org/show_bug.cgi?id=151860
Summary [B3] Typo fix after r193386 to fix the build
Csaba Osztrogonác
Reported 2015-12-04 04:30:50 PST
../../Source/JavaScriptCore/b3/B3StackmapSpecial.cpp:189:48: error: 'JSC::B3::Air::Arg::Arg' names the constructor, not the type ../../Source/JavaScriptCore/b3/B3StackmapSpecial.cpp:189:6: error: prototype for 'bool JSC::B3::StackmapSpecial::isArgValidForValue(const int&, JSC::B3::Value*)' does not match any in class 'JSC::B3::StackmapSpecial' In file included from ../../Source/JavaScriptCore/b3/B3StackmapSpecial.cpp:27:0: ../../Source/JavaScriptCore/b3/B3StackmapSpecial.h:74:17: error: candidate is: static bool JSC::B3::StackmapSpecial::isArgValidForValue(const JSC::B3::Air::Arg&, JSC::B3::Value*) Arg::Arg must be a typo, it should be Air::Arg similar to the header.
Attachments
Patch (1.35 KB, patch)
2015-12-04 04:31 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-12-04 04:31:52 PST
Csaba Osztrogonác
Comment 2 2015-12-07 01:50:29 PST
ping?
WebKit Commit Bot
Comment 3 2015-12-07 09:29:16 PST
Comment on attachment 266622 [details] Patch Clearing flags on attachment: 266622 Committed r193631: <http://trac.webkit.org/changeset/193631>
WebKit Commit Bot
Comment 4 2015-12-07 09:29:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.