[B3] Typo fix after r193386 to fix the build https://bugs.webkit.org/show_bug.cgi?id=151860

Reviewed by Filip Pizlo.

* b3/B3StackmapSpecial.cpp:
(JSC::B3::StackmapSpecial::isArgValidForValue):


Canonical link: https://commits.webkit.org/170081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193631 268f45cc-cd09-0410-ab3c-d52691b4dbfc